added getprojectbytoken, bug correction
